[gd_scene load_steps=2 format=3 uid="uid://csell_confirmation"]

[ext_resource type="Script" path="res://scripts/ui/sell_confirmation.gd" id="1_sell_confirm"]

[node name="SellConfirmation" type="PanelContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sell_confirm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "SELL DIGIMON?"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TowerInfo" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TowerSprite" type="TextureRect" parent="MarginContainer/VBoxContainer/TowerInfo"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="Details" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TowerInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="TowerName" type="Label" parent="MarginContainer/VBoxContainer/TowerInfo/Details"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Greymon"

[node name="TowerLevel" type="Label" parent="MarginContainer/VBoxContainer/TowerInfo/Details"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Level 25 | Champion"

[node name="TowerDP" type="Label" parent="MarginContainer/VBoxContainer/TowerInfo/Details"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.7, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "DP: 3 | Origin: In-Training"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SellValue" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Sell Value: 975 DB"
horizontal_alignment = 1

[node name="Warning" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "This cannot be undone!"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ConfirmBtn" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "CONFIRM SELL"

[node name="CancelBtn" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Cancel"
